--- a/public/uikit/styles/modules/_base.css
+++ b/public/uikit/styles/modules/_base.css
@@ -2,9 +2,9 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  text-rendering: optimizeLegibility;
+  /* text-rendering: optimizeLegibility;
   color: inherit;
-  font-size: inherit;
+  font-size: inherit; */
 }
 
 html {
